--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.22.0",
-    "meteor-node-stubs": "~0.2.0"
+    "meteor-node-stubs": "~0.2.0",
+    "owl.carousel": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
