--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: meteor-application-template
+title: aloha-farmers
 description: A template for quickly starting Meteor application development
 google_analytics: 
 show_downloads: true
